# tartanairpy

./: .buildinfo  .gitignore  .gitmodules  LICENSE  README.md  __init__.py  environments.html  examples.html  flow_sampling.html  genindex.html  index.html  installation.html  modalities.html  objects.inv  pyproject.toml  search.html  searchindex.js  segmentation.html  setup.py  sphinx-reading-durations.json  tartanground.html  troubleshooting.html  usage.html
.circleci/: config.yml
.doctrees/: environment.pickle  environments.doctree  examples.doctree  flow_sampling.doctree  index.doctree  installation.doctree  modalities.doctree  segmentation.doctree  tartanground.doctree  troubleshooting.doctree  usage.doctree
.github/workflows/: docs-preview.yml  documentation.yaml
_sources/: examples.rst.txt  flow_sampling.rst.txt  index.rst.txt  installation.rst.txt  modalities.rst.txt  segmentation.rst.txt  troubleshooting.rst.txt  usage.rst.txt
docs/: CNAME  conf.py  environments.rst  examples.rst  index.rst  installation.rst  modalities.rst  segmentation.rst  tartanground.rst  usage.rst
docs/tartanground/: index.html
examples/: 00sampler.py  accumulate_pointcloud.py  customization_example.py  dataloader_example.py  dataset_example.py  download_config.yaml  download_example.py  download_ground_example.py  download_ground_hf_example.py  evaluator_example.py  flow_resampling_example.py  flow_sampling_example.py  get_traj_example.py  iterator_example.py  list_example.py  multi_thread_download_example.py  sanity_test.py  seg_vis_example.py  slowloader_example.py  subsample_semantic_pcd_gpu.py  unzip_example.py  unzip_ground_files.py  unzip_ground_files_hf.py  visualization_example.py  visualize_semantic_occ_local.py
source/: conf.py  index.rst
src/tartanair/: __init__.py  customizer.py  dataset.py  downloader.py  reader.py  tartanair.py  tartanair_module.py
tartanair/: __init__.py  customizer.py  dataloader.py  dataset.py  download_files.txt  download_ground_files.txt  downloader.py  downloader_hf.py  evaluator.py  flow_calculation.py  flow_utils.py  iterator.py  lister.py  random_accessor.py  reader.py  seg_rgbs.txt  tartanair.py  tartanair_module.py  unzipper.py  visualizer.py
tartanair/eval_utils/: trajectory_evaluator_ate.py  trajectory_evaluator_base.py  (+1 more)
tests/: README.md  basic_test.py  tartanairpy_test.py  test.py
(+54 files in other folders)
