[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CI-tartanair"
dynamic = ['version']
authors = [
  { name="Yorai Shaoul", email="yorai@cmu.edu" },
  { name="Wenshan Wang", email="wenshanw@cs.cmu.edu " } 
]
description = "TartanAir"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://theairlab.org/tartanair-dataset/"
