[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tartanair"
version = "0.0.95"
authors = [
  { name="Yorai Shaoul", email="yorai@cmu.edu" },
  { name="Wenshan Wang", email="wenshanw@cs.cmu.edu " } 
]
description = "TartanAir"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama",
    "cupy",
    "kornia",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "opencv_contrib_python",
    "Pillow",
    "plyfile",
    "pyquaternion",
    "pytransform3d",
    "PyYAML",
    "scipy",
    "torch",
    "torchvision",
    "pyyaml",
    ]

[project.urls]
"Homepage" = "http://theairlab.org/tartanair-dataset/"
